<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.ShowProfileActivity">


    <ImageView
        android:id="@+id/imageView_profilePicture"
        android:layout_width="@dimen/profilePicture_width_port"
        android:layout_height="@dimen/profilePicture_height_port"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/name"
        android:padding="2dp"
        android:layout_below="@id/imageView_profilePicture"/>

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/email"
        android:padding="2dp"
        android:layout_below="@id/textView_name"/>

    <TextView
        android:id="@+id/textView_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/bio"
        android:padding="2dp"
        android:layout_below="@id/textView_email"/>

</RelativeLayout>