<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.EditProfileActivity">

    <ImageView
        android:id="@+id/imageView_profilePicture"
        android:layout_width="@dimen/profilePicture_width_port"
        android:layout_height="@dimen/profilePicture_height_port"
        app:srcCompat="@drawable/avatar" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:layout_below="@id/imageView_profilePicture"/>

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:layout_below="@id/editText_name"/>

    <EditText
        android:id="@+id/editText_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/bio"
        android:layout_below="@id/editText_email"/>

    <Button
        android:id="@+id/button_takePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_bio"
        android:onClick="takePictureFromCamera"
        android:text=" take new \n picture" />

    <Button
        android:id="@+id/button_selectPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_bio"
        android:layout_toRightOf="@id/button_takePicture"
        android:onClick="selectPictureFromGallery"
        android:text=" select from \n gallery" />

</RelativeLayout>
